--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <button>Submit</button>
       </form>
     </section>
-    <footer>
+    <footer id="footerid">
       <h1>Also Visite the Accounts</h1>
       <div class="socialLinks">
         <ul>
