created the log in page onlu for desktop please insert the phone css on next commit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#">Contact Us</a>
           </li>
           <li>
-            <a href="#">Log In</a>
+            <a href="logInPage.html">Log In</a>
           </li>
           <li>
             <a href="#">Sin up</a>
@@ -161,6 +161,7 @@
           </li>
         </ul>
       </div>
+      <p>Copyrightm @ HealthFit Gym 2023 PVT.LMT</p>
     </footer>
   </body>
 </html>
