inserted the phone css in login page please upadte for below 400px width

--- a/logInPage.html
+++ b/logInPage.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Anton&family=Climate+Crisis&family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:1200px)"
+      href="phoneCssForLogINPage.css"
+    />
   </head>
   <body>
     <div class="navbar">
