created the sin up page and do the phone css for sin up page also do adinistartor page

--- a/logInPage.html
+++ b/logInPage.html
@@ -41,7 +41,10 @@
             <a href="#" class="active">Log In </a>
           </li>
           <li>
-            <a href="#">Sin up</a>
+            <a href="sinUpPage.html">Sin up</a>
+          </li>
+          <li>
+            <a href="#">Administor Page</a>
           </li>
         </ul>
       </nav>
