--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             <a href="logInPage.html">Log In</a>
           </li>
           <li>
-            <a href="#">Sin up</a>
+            <a href="sinUpPage.html">Sin up</a>
+          </li>
+          <li>
+            <a href="#">Adnistor Page</a>
           </li>
         </ul>
       </nav>
